mudança de porta da api e modificacao na classe ConfiguracaoSeguranca